# c_chinese_chess

./: .gitignore  CMakeLists.txt  chess_board.txt
include/: chess_board.h  defs.h
src/: chess_board.c  main.c
